Add About page for Óli Bj.: complete Icelandic biography from kvótakóngur to pilot to weather enthusiast, navigation menu update, portrait placeholder, and fun timeline with quotes

--- a/templates/base.html
+++ b/templates/base.html
@@ -511,6 +511,12 @@
                 </a>
             </div>
             <div class="nav-item">
+                <a href="{% url 'weather:about' %}" class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
+                    <i class="bi bi-person-circle"></i>
+                    Um Óla Bj.
+                </a>
+            </div>
+            <div class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="bi bi-calendar3"></i>
                     Dagatal
