--- a/templates/base.html
+++ b/templates/base.html
@@ -512,8 +512,8 @@
             </div>
             <div class="nav-item">
                 <a href="{% url 'weather:about' %}" class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-                    <i class="bi bi-person-circle"></i>
-                    Um Óla Bj.
+                    <i class="bi bi-people"></i>
+                    Teymið
                 </a>
             </div>
             <div class="nav-item">
